# qa-full-flow

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  start_all.py  start_api.py  sync_scheduler.py
.ai/checks/: validate.ps1  validate.sh
.ai/memory/: coding-conventions.md  decisions.md  known-issues.md
.ai/subagents/: change-reviewer.md  code-analyst.md  code-implementer.md  knowledge-recorder.md
.qwen/: settings.json
configs/: default.yaml
data/mock_test_kb/: chroma.sqlite3
docs/: architecture.md  prompt_management.md
examples/: jira_confluence_import.py
skills/: testcase-skill-api.md  testcase-skill.md
src/: __init__.py
src/agent/: json_parser.py  llm_service.py  test_agent.py  test_phase1_analyzer.py  test_phase2_generator.py  test_phase3_reviewer.py  test_phase4_deliver.py  test_session.py
src/agent/prompts/: test_analysis.py  test_design.py
src/api/: app.py  schemas.py
src/config/: settings.py
src/data_pipeline/: __init__.py  chunker.py  pipeline.py
src/data_pipeline/loaders/: __init__.py  base.py  confluence_loader.py  jira_loader.py  jsonl_loader.py
src/qa_full_flow/: __init__.py
src/qa_full_flow/agent/: __init__.py  document_structurer.py  json_parser.py  llm_service.py  prompt_manager.py  semantic_matcher.py  test_phase1_analyzer.py  test_phase2_generator.py  test_phase3_reviewer.py  test_phase4_deliver.py  test_session.py  traceability_verifier.py
src/qa_full_flow/agent/prompts/: test_analysis.py  test_design.py
src/qa_full_flow/api/: app.py  dependencies.py  schemas.py
src/qa_full_flow/api/middleware/: error_handler.py  logging.py
src/qa_full_flow/api/routes/: health.py  knowledge.py  prompt_management.py  testcases.py
src/qa_full_flow/core/: __init__.py  config.py  exceptions.py  logging.py
src/qa_full_flow/data_pipeline/: chunker.py  pipeline.py
src/qa_full_flow/data_pipeline/loaders/: base.py  confluence_loader.py  jira_loader.py  jsonl_loader.py  tapd_loader.py
src/qa_full_flow/embedding/: embedder.py
src/qa_full_flow/retrieval/: bm25.py  hybrid.py  reranker.py  retriever.py
src/qa_full_flow/vector_store/: chroma_store.py
src/retrieval/: __init__.py  hybrid.py  reranker.py  retriever.py
src/vector_store/: chroma_store.py
tests/: conftest.py  test_basic.py  test_chunker.py
tests/test_knowledge/: main.py  mock_test_data.jsonl  write_knowledge.py
tests/test_pipeline/: test_chroma_write.py  test_loader_integration.py  test_loaders.py  test_tapd_data.py  view_chroma_data.py
(+2 files in other folders)
